Fix vote iframe z-index

--- a/public/css/drivin.css
+++ b/public/css/drivin.css
@@ -134,6 +134,7 @@ iframe.nko-vote {
     position:absolute;
     top:35px;
     left:174px;
+    z-index: 9999;
 }
 
 div#video-audience {
